// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ethRewards computeApproxPageRank should downvote and undo 1`] = `
Object {
  "author": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "airdropTokens": 0,
    "balance": 222,
    "bio": "sup bro!",
    "blocked": Array [],
    "blockedBy": Array [],
    "confirmed": false,
    "createdAt": "[SANITIZED]",
    "desktopSubscriptions": Array [],
    "deviceTokens": Array [],
    "email": "bob@bob.com",
    "ethAddress": Array [
      "0xf17f52151EbEF6C7334FAD080c5704D77216b732",
    ],
    "handle": "bob",
    "hashedPassword": "[SANITIZED]",
    "id": "[SANITIZED]",
    "image": "bob-pic.jpg",
    "investmentCount": 0,
    "lastFeedNotification": 1970-01-01T00:00:00.000Z,
    "lastVote": "[SANITIZED]",
    "legacyAirdrop": 0,
    "legacyTokens": 0,
    "lockedTokens": 0,
    "messages": 0,
    "name": "Bob",
    "notificationSettings": Object {
      "desktop": Object {
        "all": false,
      },
      "email": Object {
        "digest": true,
        "general": false,
        "personal": true,
      },
      "mobile": Object {
        "all": false,
      },
    },
    "onboarding": 0,
    "online": false,
    "password": "test",
    "postCount": 0,
    "profile": Object {
      "name": "Bob",
      "role": "user",
    },
    "referralTokens": 0,
    "relevance": Object {
      "__v": 1,
      "_id": "[SANITIZED]",
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "global": true,
      "invites": 0,
      "pagerank": 57.08,
      "pagerankRaw": 0.073,
      "relevance": 0,
      "relevanceRecord": Array [],
      "topTopics": Array [],
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
    "relevanceRecord": Array [],
    "role": "user",
    "salt": "[SANITIZED]",
    "token": Object {
      "_id": "[SANITIZED]",
      "role": "user",
    },
    "tokenBalance": 0,
    "topTopics": Array [],
    "updatedAt": "[SANITIZED]",
    "votePower": 1,
    "webOnboard": Object {
      "onboarding": false,
    },
  },
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": -20.68,
      "pagerankRaw": 0.034,
      "pagerankRawNeg": 0.059,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": 0,
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "bob-pic.jpg",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "link_img1.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;

exports[`ethRewards computeApproxPageRank should upvote and undo 1`] = `
Object {
  "author": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "airdropTokens": 0,
    "balance": 222,
    "bio": "sup bro!",
    "blocked": Array [],
    "blockedBy": Array [],
    "confirmed": false,
    "createdAt": "[SANITIZED]",
    "desktopSubscriptions": Array [],
    "deviceTokens": Array [],
    "email": "bob@bob.com",
    "ethAddress": Array [
      "0xf17f52151EbEF6C7334FAD080c5704D77216b732",
    ],
    "handle": "bob",
    "hashedPassword": "[SANITIZED]",
    "id": "[SANITIZED]",
    "image": "bob-pic.jpg",
    "investmentCount": 0,
    "lastFeedNotification": 1970-01-01T00:00:00.000Z,
    "lastVote": "[SANITIZED]",
    "legacyAirdrop": 0,
    "legacyTokens": 0,
    "lockedTokens": 0,
    "messages": 0,
    "name": "Bob",
    "notificationSettings": Object {
      "desktop": Object {
        "all": false,
      },
      "email": Object {
        "digest": true,
        "general": false,
        "personal": true,
      },
      "mobile": Object {
        "all": false,
      },
    },
    "onboarding": 0,
    "online": false,
    "password": "test",
    "postCount": 0,
    "profile": Object {
      "name": "Bob",
      "role": "user",
    },
    "referralTokens": 0,
    "relevance": Object {
      "__v": 1,
      "_id": "[SANITIZED]",
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "global": true,
      "invites": 0,
      "pagerank": 99,
      "pagerankRaw": 0.169,
      "relevance": 0,
      "relevanceRecord": Array [],
      "topTopics": Array [],
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
    "relevanceRecord": Array [],
    "role": "user",
    "salt": "[SANITIZED]",
    "token": Object {
      "_id": "[SANITIZED]",
      "role": "user",
    },
    "tokenBalance": 0,
    "topTopics": Array [],
    "updatedAt": "[SANITIZED]",
    "votePower": 1,
    "webOnboard": Object {
      "onboarding": false,
    },
  },
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": 72.37,
      "pagerankRaw": 0.085,
      "pagerankRawNeg": 0,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": 0,
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "bob-pic.jpg",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "link_img1.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;

exports[`ethRewards computeApproxPageRank should upvote and undo with no author 1`] = `
Object {
  "author": null,
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": -51.3,
      "pagerankRaw": 0.034,
      "pagerankRawNeg": 0.103,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": 0,
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "bob-pic.jpg",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "link_img1.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;
